--- a/src/styles/shared/fields.scss
+++ b/src/styles/shared/fields.scss
@@ -191,10 +191,7 @@
       transform: rotate(315deg);
     }
   }
-}
 
-// вирівнювання по верхньому краю
-.checkbox-group {
   &.checkbox-group__top {
     align-items: flex-start;
   }
@@ -211,15 +208,96 @@
   }
 }
 
+// apple switch
+input.apple-switch {
+  position: relative;
+  -webkit-appearance: none;
+  outline: none;
+  width: 50px;
+  height: 30px;
+  background-color: #fff;
+  border: 1px solid #D9DADC;
+  border-radius: 50px;
+  box-shadow: inset -20px 0 0 0 #fff;
 
+  &:after {
+    content: "";
+    position: absolute;
+    top: 1px;
+    left: 1px;
+    background: transparent;
+    width: 26px;
+    height: 26px;
+    border-radius: 50%;
+    box-shadow: 2px 4px 6px rgba(0,0,0,0.2);
+  }
 
+  &:checked {
+    box-shadow: inset 20px 0 0 0 $color-orange;
+    border-color: $color-orange;
+  }
 
+  &:checked:after {
+    left: 20px;
+    box-shadow: -2px 4px 3px rgba(0,0,0,0.05);
+  }
+}
 
+// radio button
+.radio-button {
+  position: relative;
+  width: 24px;
+  height: 24px;
 
+  &__control {
+    opacity: 0;
+    cursor: pointer;
 
+    height: 0;
+    width: 0;
 
+    &:checked {
+      & + .radio-button__checkmark {
+        border-color: rgba(242, 169, 0, 0.8);
 
+        &:after {
+          display: block;
+        }
+      }
+    }
+  }
 
+  &__checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    width: 24px;
+    height: 24px;
+
+    border: 1px solid #979797;
+    border-radius: 50%;
+
+    &:after {
+      content: '';
+      display: none;
+
+      position: absolute;
+      top: 5px;
+      left: 3px;
+
+      width: 13px;
+      height: 7px;
+
+      border-left: 2px solid rgba(242, 169, 0, 0.8);
+      border-bottom: 2px solid rgba(242, 169, 0, 0.8);
+
+      -webkit-transform: rotate(315deg);
+      -ms-transform: rotate(315deg);
+      transform: rotate(315deg);
+    }
+  }
+}
 
 
 
@@ -252,18 +330,15 @@
     color: #979797B0;
   }
 
-  // дублируется без :-webkit-autofill для Firefox
   &:placeholder-shown:not(:focus)::placeholder {
     opacity: 0;
   }
   &:not(:-webkit-autofill):placeholder-shown:not(:focus)::placeholder {
     opacity: 0;
   }
-  //
 }
 
 @mixin float-label-scaled {
-  // дублируется без :-webkit-autofill для Firefox
   &:placeholder-shown:not(:focus)  + * {
     font-size: 14px;
     color: #979797B0;
@@ -276,7 +351,6 @@
     pointer-events: none;
     @content;
   }
-  //
 }
 
 .has-float-label {
@@ -290,13 +364,6 @@
     @include float-label-scaled {
       top: 12px;
       left: 12px;
-
-      //.prefix ~ & {
-      //  padding-left: 40px;
-      //}
-      //.suffix ~ & {
-      //  padding-right: 40px;
-      //}
     }
   }
 }
