--- a/src/styles/shared/icons.scss
+++ b/src/styles/shared/icons.scss
@@ -64,4 +64,48 @@
     height: 24px;
     background-image: url('../assets/images/icons/ic_side-settings.svg');
   }
+
+  &_faceid {
+    width: 18px;
+    height: 18px;
+    background-image: url('../assets/images/icons/ic_faceid.svg');
+  }
+
+  &_notification {
+    width: 18px;
+    height: 18px;
+    background-image: url('../assets/images/icons/ic_notification.svg');
+  }
+
+  &_share {
+    width: 18px;
+    height: 18px;
+    background-image: url('../assets/images/icons/ic_share.svg');
+  }
+
+  &_logout {
+    width: 18px;
+    height: 18px;
+    background-image: url('../assets/images/icons/ic_logout.svg');
+  }
+
+  &_delete {
+    width: 21px;
+    height: 23px;
+    background-image: url('../assets/images/icons/ic_delete.svg');
+  }
+
+  &_card-visa {
+    width: 65px;
+    height: 40px;
+    //background-image: url('../assets/images/icons/ic_card-visa.svg');
+    background-image: url('../assets/images/icons/ic_card-visa.png');
+  }
+
+  &_card-mastercard {
+    width: 65px;
+    height: 40px;
+    //background-image: url('../assets/images/icons/ic_card-mastercard.svg');
+    background-image: url('../assets/images/icons/ic_card-mastercard.png');
+  }
 }
