--- a/src/styles/shared/shared.scss
+++ b/src/styles/shared/shared.scss
@@ -92,6 +92,10 @@ p, h1, h2, h3, h4 {
   font-size: 16px;
   line-height: 16px;
 }
+.text-17-16 {
+  font-size: 17px;
+  line-height: 16px;
+}
 .text-19-16 {
   font-size: 19px;
   line-height: 16px;
