--- a/src/styles/profile.scss
+++ b/src/styles/profile.scss
@@ -1,11 +1,5 @@
 @import "shared/shared";
 
-//main {
-//  padding: 0 16px;
-//  height: calc(100% - 49px);
-//}
-
-
 .profile {
   &__logo {
 
@@ -184,3 +178,41 @@
   margin-top: 84px;
 }
 
+.bottom-swipe-menu {
+  position: absolute;
+  bottom: 0;
+  overflow: hidden;
+
+  width: 100vw;
+  margin-left: -16px;
+
+  background: #FFFFFF;
+  box-shadow: 0px -4px 12px rgba(214, 209, 209, 0.32);
+  border-radius: 15px 15px 0 0;
+
+  transition: top 0.3s;
+
+  &__overlay {
+    position: absolute;
+  }
+
+  &__header {
+    height: 3px;
+    width: 76px;
+    margin: 20px auto;
+    border-radius: 2px;
+    background-color: $color-green;
+  }
+
+  &__content {
+    padding: 0 32px 20px;
+    max-height: calc(100% - 43px);
+    overflow-y: scroll;
+  }
+
+  &__items-container {
+    display: grid;
+    grid-auto-rows: 1fr;
+    grid-row-gap: 24px;
+  }
+}
