--- a/src/styles/regular-payment.scss
+++ b/src/styles/regular-payment.scss
@@ -17,10 +17,6 @@
         position: absolute;
         top: 4px;
         right: 6px;
-
-        &__checkmark {
-          border: none;
-        }
       }
     }
   }
@@ -72,6 +68,34 @@
       }
     }
 
+  }
+
+
+  &__edit-list {
+    display: grid;
+    grid-gap: 16px;
+    width: 100%;
+
+    &__item {
+      display: flex;
+      align-items: center;
+      padding: 8px 8px 8px 12px;
+
+      border: 1px solid $color-orange;
+      border-radius: 7px;
+      border-left-width: 6px;
+
+      font-size: 14px;
+      line-height: 16px;
+
+      span {
+        max-width: calc(100% - 36px);
+      }
+
+      .radio-button {
+        margin-left: auto;
+      }
+    }
   }
 }
 
