--- a/src/styles/shared/cards.scss
+++ b/src/styles/shared/cards.scss
@@ -73,3 +73,114 @@
     }
   }
 }
+
+.slick-card-container {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+.card-big {
+  position: relative;
+  width: 288px;
+  height: 155px;
+  overflow: hidden;
+  border-radius: 20px;
+  box-shadow: 2px 8px 15px rgba(164, 142, 142, 0.25);
+  background: #fff;
+
+
+  &:after {
+    content: " ";
+    position: absolute;
+    right: -45px;
+    top: 81px;
+    width: 276px;
+    height: 65px;
+    transform: rotate(142deg);
+    background: rgba(230, 221, 200, 0.3);
+  }
+
+  &.bg-card {
+    &-1 {
+      background: linear-gradient(121.57deg, #F2A900 61.98%, #115E67 100%);
+    }
+    &-2 {
+      background: linear-gradient(100.37deg, rgba(185, 76, 236, 0.7) 6.58%, rgba(242, 169, 0, 0.62) 76.88%);
+    }
+  }
+
+  &__bank {
+    position: absolute;
+    top: 9px;
+    left: 20px;
+  }
+
+  &__settings {
+    position: absolute;
+    top: 6px;
+    right: 18px;
+  }
+
+  &__pay-system {
+    position: absolute;
+    bottom: 20px;
+    right: 13px;
+  }
+
+  &__content {
+    width: 100%;
+    height: 100%;
+    padding: 41px 58px 17px 21px;
+    display: flex;
+    flex-direction: column;
+
+    &__name {
+      font-size: 18px;
+      line-height: 18px;
+      font-weight: bold;
+      letter-spacing: -0.078px;
+      color: #FFFFFF;
+    }
+
+    &__mask {
+      margin-top: 15px;
+
+      font-size: 14px;
+      line-height: 18px;
+      letter-spacing: -0.078px;
+      color: #FFFFFF;
+    }
+
+    &__type {
+      margin-top: auto;
+
+      font-size: 14px;
+      line-height: 18px;
+      letter-spacing: -0.078px;
+      color: #FFFFFF;
+    }
+
+  }
+
+  &__add-new-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 16px;
+    width: 100%;
+    height: 100%;
+
+    &__text {
+      margin-top: 10px;
+      font-size: 14px;
+      line-height: 18px;
+      color: #979797CF;
+      letter-spacing: -0.078px;
+    }
+  }
+
+
+}
