--- a/src/styles/shared/shared.scss
+++ b/src/styles/shared/shared.scss
@@ -329,11 +329,11 @@ p, h1, h2, h3, h4 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100%;
+  width: 100vw;
   box-shadow: 0px -4px 12px rgba(161, 161, 161, 0.32);
   border-radius: 16px 16px 0 0;
   margin-top: 24px;
-  padding-top: 50px;
+  padding: 50px 16px;
 
   &__icon {
     position: absolute;
