--- a/src/pages/regular-payment.pug
+++ b/src/pages/regular-payment.pug
@@ -44,7 +44,7 @@ html(lang="uk")
 
             +divider('Регулярні платежи', 'divider--white', 'margin: 62px 0 24px')
 
-            .card-list.regular-payment__card-list.mb-32
+            .card-list.regular-payment__card-list
               label.card(for='card-1')
                 .card__content
                   .radio-button.radio-button--no-border.radio-button--20
