--- a/src/styles/regular-payment.scss
+++ b/src/styles/regular-payment.scss
@@ -81,12 +81,17 @@
       align-items: center;
       padding: 8px 8px 8px 12px;
 
-      border: 1px solid $color-orange;
+      border: 1px solid;
+      border-color: rgba(196, 196, 196, 0.31);
       border-radius: 7px;
       border-left-width: 6px;
 
       font-size: 14px;
       line-height: 16px;
+
+      &.active {
+        border-color: $color-orange;
+      }
 
       span {
         max-width: calc(100% - 36px);
