--- a/src/styles/shared/icons.scss
+++ b/src/styles/shared/icons.scss
@@ -132,4 +132,16 @@
     height: 50px;
     background-image: url('../assets/images/icons/ic_add-new-card.svg');
   }
+
+  &_calendar {
+    width: 22px;
+    height: 22px;
+    background-image: url('../assets/images/icons/ic_calendar.svg');
+  }
+
+  &_calendar--active {
+    width: 22px;
+    height: 22px;
+    background-image: url('../assets/images/icons/ic_calendar--active.svg');
+  }
 }
