--- a/src/styles/shared/shared.scss
+++ b/src/styles/shared/shared.scss
@@ -123,6 +123,10 @@ p, h1, h2, h3, h4 {
     color: $color-81765E;
   }
 
+  &-81765E80 {
+    color: #81765E80;
+  }
+
   &-979797B0 {
     color: $color-979797B0;
   }
