--- a/src/styles/shared/fields.scss
+++ b/src/styles/shared/fields.scss
@@ -344,12 +344,115 @@ input.apple-switch {
 
 // datepicker
 .ui-datepicker {
+  padding: 16px 10px 22px;
+
+  background-color: #fff;
+  box-shadow: 8px 10px 60px rgba(0, 0, 0, 0.1);
+  border-radius: 13px;
+
   &-header {
+    position: relative;
+    display: flex;
+    align-items: center;
     height: 44px;
+    padding-left: 12px;
+
+    .ui-datepicker {
+
+      &-prev {
+        position: absolute;
+        top: calc(50% - 8.5px);
+        right: 58px;
+        width: 10px;
+        height: 17px;
+        background-image: url("../assets/images/icons/ic_left--big.svg");
+        color: transparent;
+        overflow: hidden;
+      }
+
+      &-next {
+        position: absolute;
+        top: calc(50% - 8.5px);
+        right: 17px;
+        width: 10px;
+        height: 17px;
+        background-image: url("../assets/images/icons/ic_right--big.svg");
+        color: transparent;
+        overflow: hidden;
+      }
+
+      &-title {
+        position: relative;
+        font-size: 18px;
+        line-height: 24px;
+        font-weight: bold;
+        letter-spacing: 0.38px;
+        color: $color-green;
+
+
+
+        &:before {
+          content: ' ';
+          position: absolute;
+          top: calc(50% - 6px);
+          right: -14px;
+          width: 7px;
+          height: 12px;
+          background-image: url("../assets/images/icons/ic_right--small.svg");
+        }
+      }
+
+      &-month {
+      }
+      &-year {
+      }
+    }
   }
 
   &-calendar {
 
+    thead {
+      height: 28px;
+      font-size: 13px;
+      line-height: 18px;
+      font-weight: bold;
+      color: #3C3C434D;
+      letter-spacing: -0.078px;
+    }
+
+    td {
+      width: 40px;
+      text-align: center;
+    }
+
+    .ui-state-default {
+      font-size: 20px;
+      line-height: 24px;
+      color: #656565;
+      letter-spacing: 0.38px;
+    }
+
+    a.ui-state-default {
+      color: $color-orange;
+    }
+
+    .ui-datepicker {
+      &-week-end {
+      }
+      &-other-month {
+      }
+      &-unselectable {
+      }
+      &-current-day {
+      }
+      &-today {
+      }
+    }
+  }
+
+  &-buttonpane {
+    .ui-datepicker-current {
+    }
   }
 }
 
