--- a/src/styles/shared/shared.scss
+++ b/src/styles/shared/shared.scss
@@ -173,6 +173,7 @@ p, h1, h2, h3, h4 {
   justify-content: center;
   align-items: center;
   height: 46px;
+  min-height: 46px;
   width: 100%;
   max-width: 245px;
   border-radius: 10px;
