--- a/src/pages/regular-payment.pug
+++ b/src/pages/regular-payment.pug
@@ -14,12 +14,12 @@ html(lang="uk")
 
   body
 
-    +header()
+    +header('regular-payment-back-btn')
 
 
 
     main#regular-payment.with-footer.regular-payment
-      .d-flex.flex-column.align-items-center
+      #regular-payment-main.d-flex.flex-column.align-items-center
         .profile__logo.mb-32
           +logo(122)
         .container-shadow
@@ -38,7 +38,7 @@ html(lang="uk")
               .regular-payment__border-orange.d-flex.pl-8.pr-8.h-61.align-items-center.mt-20
                 <svg width="42" height="42" viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="21" cy="21" r="21" fill="#F2A900" fill-opacity="0.9"/><path d="M13.75 13C13.0207 13 12.3212 13.2897 11.8055 13.8055C11.2897 14.3212 11 15.0207 11 15.75V26.25C11 26.6111 11.0711 26.9687 11.2093 27.3024C11.3475 27.636 11.5501 27.9392 11.8055 28.1945C12.0608 28.4499 12.364 28.6525 12.6976 28.7907C13.0313 28.9289 13.3889 29 13.75 29H20.498C20.2973 28.5189 20.1556 28.0152 20.076 27.5H13.75C13.06 27.5 12.5 26.94 12.5 26.25V15.75C12.5 15.06 13.06 14.5 13.75 14.5H28.25C28.94 14.5 29.5 15.06 29.5 15.75V20.732C30.0486 21.0183 30.5537 21.3813 31 21.81V15.75C31 15.0207 30.7103 14.3212 30.1945 13.8055C29.6788 13.2897 28.9793 13 28.25 13H13.75ZM23.278 22.975C23.3528 23.2336 23.3746 23.5046 23.3421 23.7719C23.3096 24.0391 23.2235 24.297 23.0889 24.5302C22.9544 24.7634 22.7742 24.967 22.559 25.1288C22.3439 25.2906 22.0983 25.4074 21.837 25.472L21.253 25.616C21.1594 26.2149 21.1614 26.8248 21.259 27.423L21.799 27.553C22.0626 27.6165 22.3105 27.7329 22.5277 27.8952C22.7449 28.0575 22.9268 28.2622 23.0624 28.497C23.1981 28.7317 23.2845 28.9916 23.3166 29.2608C23.3487 29.53 23.3257 29.8029 23.249 30.063L23.062 30.695C23.502 31.081 24.002 31.394 24.546 31.616L25.04 31.098C25.2268 30.9015 25.4517 30.745 25.7008 30.6381C25.95 30.5312 26.2183 30.476 26.4895 30.476C26.7607 30.476 27.029 30.5312 27.2782 30.6381C27.5273 30.745 27.7522 30.9015 27.939 31.098L28.437 31.623C28.9785 31.4028 29.4796 31.0943 29.92 30.71L29.722 30.024C29.6474 29.7655 29.6257 29.4945 29.6583 29.2274C29.6908 28.9603 29.777 28.7025 29.9115 28.4694C30.046 28.2364 30.2262 28.0329 30.4413 27.8711C30.6563 27.7094 30.9018 27.5927 31.163 27.528L31.747 27.384C31.8409 26.7848 31.8389 26.1745 31.741 25.576L31.201 25.446C30.9374 25.3825 30.6895 25.2661 30.4723 25.1038C30.2551 24.9416 30.0732 24.7368 29.9376 24.5021C29.8019 24.2673 29.7155 24.0074 29.6834 23.7382C29.6513 23.469 29.6743 23.1961 29.751 22.936L29.938 22.306C29.4981 21.918 28.9965 21.6061 28.454 21.383L27.961 21.902C27.7742 22.0987 27.5493 22.2553 27.3 22.3623C27.0507 22.4693 26.7823 22.5245 26.511 22.5245C26.2397 22.5245 25.9713 22.4693 25.722 22.3623C25.4727 22.2553 25.2478 22.0987 25.061 21.902L24.563 21.377C24.019 21.597 23.519 21.907 23.08 22.289L23.278 22.975ZM26.5 28C25.7 28 25.05 27.328 25.05 26.5C25.05 25.671 25.7 25 26.5 25C27.3 25 27.95 25.671 27.95 26.5C27.95 27.328 27.3 28 26.5 28Z" fill="white"/><line x1="14.5386" y1="18.3462" x2="23.7693" y2="18.3462" stroke="white"/><line x1="14.5386" y1="22.0385" x2="21.9232" y2="22.0385" stroke="white"/></svg>
                 .text-14-16.color-6B6B6B.ml-12 Налаштувати регулярний платіж
-              .regular-payment__border-orange.d-flex.pl-8.pr-8.h-61.align-items-center.mt-20
+              .regular-payment__border-orange.d-flex.pl-8.pr-8.h-61.align-items-center.mt-20.regular-payment-page-link
                 <svg width="42" height="42" viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="21" cy="21" r="21" fill="#F2A900" fill-opacity="0.9"/><path d="M25.281 19.719C25.3508 19.7887 25.4062 19.8714 25.444 19.9625C25.4818 20.0537 25.5013 20.1513 25.5013 20.25C25.5013 20.3486 25.4818 20.4463 25.444 20.5374C25.4062 20.6286 25.3508 20.7113 25.281 20.781L20.781 25.281C20.7113 25.3508 20.6285 25.4063 20.5374 25.4441C20.4463 25.4819 20.3486 25.5013 20.25 25.5013C20.1513 25.5013 20.0536 25.4819 19.9625 25.4441C19.8714 25.4063 19.7886 25.3508 19.719 25.281L17.469 23.031C17.3992 22.9613 17.3439 22.8785 17.3062 22.7874C17.2684 22.6963 17.249 22.5986 17.249 22.5C17.249 22.4014 17.2684 22.3037 17.3062 22.2126C17.3439 22.1215 17.3992 22.0387 17.469 21.969C17.6098 21.8282 17.8008 21.7491 18 21.7491C18.0986 21.7491 18.1962 21.7685 18.2873 21.8062C18.3785 21.844 18.4612 21.8993 18.531 21.969L20.25 23.6895L24.219 19.719C24.2886 19.6492 24.3714 19.5937 24.4625 19.5559C24.5536 19.5181 24.6513 19.4987 24.75 19.4987C24.8486 19.4987 24.9463 19.5181 25.0374 19.5559C25.1285 19.5937 25.2113 19.6492 25.281 19.719Z" fill="white"/><path d="M14.25 9C14.4489 9 14.6397 9.07902 14.7803 9.21967C14.921 9.36032 15 9.55109 15 9.75V10.5H27V9.75C27 9.55109 27.079 9.36032 27.2197 9.21967C27.3603 9.07902 27.5511 9 27.75 9C27.9489 9 28.1397 9.07902 28.2803 9.21967C28.421 9.36032 28.5 9.55109 28.5 9.75V10.5H30C30.7956 10.5 31.5587 10.8161 32.1213 11.3787C32.6839 11.9413 33 12.7044 33 13.5V30C33 30.7956 32.6839 31.5587 32.1213 32.1213C31.5587 32.6839 30.7956 33 30 33H12C11.2044 33 10.4413 32.6839 9.87868 32.1213C9.31607 31.5587 9 30.7956 9 30V13.5C9 12.7044 9.31607 11.9413 9.87868 11.3787C10.4413 10.8161 11.2044 10.5 12 10.5H13.5V9.75C13.5 9.55109 13.579 9.36032 13.7197 9.21967C13.8603 9.07902 14.0511 9 14.25 9V9ZM10.5 15V30C10.5 30.3978 10.658 30.7794 10.9393 31.0607C11.2206 31.342 11.6022 31.5 12 31.5H30C30.3978 31.5 30.7794 31.342 31.0607 31.0607C31.342 30.7794 31.5 30.3978 31.5 30V15H10.5Z" fill="white"/></svg>
                 .text-14-16.color-6B6B6B.ml-12 Налаштувати нагадування про поповнення
 
@@ -93,6 +93,39 @@ html(lang="uk")
                 button.card__right-button(type='button')
                   .ic_delete
                   .text-12-16.color-orange.mt-8 Видалити
+
+      #regular-payment-page__0.d-flex.flex-column.align-items-center.d-none
+        .text-16-16.color-6B6B6B.mt-48.mb-28 Налаштування нагадувань
+        .text-13-20.color-858585.w-100.mb-16 Оберіть період за який отримаєте нагадування про поповнення рахунку для успішного виконання регулярного платежу
+        form.d-flex.flex-column.w-100
+          label.d-flex.align-items-center.mt-12.mb-12(for='notifications-setting-1')
+            .radio-button
+              input.radio-button__control(type='radio' name="notifications-setting" id="notifications-setting-1" value="1")
+              .radio-button__checkmark
+            .text-16-16.color-656565.ml-20 за 1 день до платежу
+          label.d-flex.align-items-center.mt-12.mb-12(for='notifications-setting-2')
+            .radio-button
+              input.radio-button__control(type='radio' name="notifications-setting" id="notifications-setting-2" value="2")
+              .radio-button__checkmark
+            .text-16-16.color-656565.ml-20 за 2 дні до платежу
+          label.d-flex.align-items-center.mt-12.mb-12(for='notifications-setting-5')
+            .radio-button
+              input.radio-button__control(type='radio' name="notifications-setting" id="notifications-setting-5" value="5")
+              .radio-button__checkmark
+            .text-16-16.color-656565.ml-20 за 5 днів до платежу
+          label.d-flex.align-items-center.mt-12.mb-12(for='notifications-setting-7')
+            .radio-button
+              input.radio-button__control(type='radio' name="notifications-setting" id="notifications-setting-7" value="7")
+              .radio-button__checkmark
+            .text-16-16.color-656565.ml-20 за тиждень до платежу
+        .list.w-100.mt-48
+          .list__item
+            .list__item__prefix
+              .ic_notification
+            .list__item__label Дозволити PUSH - сповіщення
+            .list__item__suffix
+              input.apple-switch(id='allow-faceid' name='allow-faceid' type='checkbox')
+
 
 
     +footer()
