--- a/src/styles/shared/icons.scss
+++ b/src/styles/shared/icons.scss
@@ -144,4 +144,16 @@
     height: 22px;
     background-image: url('../assets/images/icons/ic_calendar--active.svg');
   }
+
+  &_phone-2 {
+    width: 17px;
+    height: 17px;
+    background-image: url('../assets/images/icons/ic_phone-2.svg');
+  }
+
+  &_email {
+    width: 24px;
+    height: 24px;
+    background-image: url('../assets/images/icons/ic_email.svg');
+  }
 }
